# CapnHook-ML

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  pyproject.toml  pyproject_build.py  readme.md  release.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-publish.yml  build-and-test.yml  pypi.yml  pypi.yml.disable  releases.yml
motivation/numpy_slow_motivation/: README.md  highway.csv  highway_nanobind.csv  numpy.csv  numpy_numba.csv
motivation/numpy_slow_motivation/highway/: highway_benchmark.py  setup.py
motivation/numpy_slow_motivation/highway/csrc/: CMakeLists.txt  Tensor.hpp  capnhook.hpp  capnhook_ext.cpp  conanfile.txt  highway_benchmark.cpp
motivation/numpy_slow_motivation/numba-numpy/: numpy_benchmark.py
motivation/numpy_slow_motivation/numpy/: numpy_benchmark.py  pyproject.toml
src/: registry.cpp  registry.hpp
src/simd/: binary.hpp  reduce.hpp  stats.hpp
tests/: benchmark.py  test_basic_arith.py  test_binary.py  test_linalg.py  test_reduce.py  test_stats.py  test_unary.py  timing.csv
