[build-system]
requires = ["scikit-build-core-conan >=0.6.0", "nanobind", "numpy"]
build-backend = "scikit_build_core_conan.build"

[tool.scikit-build-core-conan]
path = "."
build = "missing"
options = [
  "openblas/*:shared=False",
  "openblas/*:build_lapack=True",
  "highway/*:shared=False",
  "*:compiler.runtime=MT"
]
settings = []
output-folder = "build"

[tool.scikit-build]
wheel.packages = [
  "capnhook_ml",
  "capnhook_ml.simd"
]

[tool.cibuildwheel]
skip = ["pp*"]
test-command = "python -c 'import capnhook_ml; print(capnhook_ml.__version__)'"

[project]
name = "capnhook-ml"
version = "0.1.2"
description = "Optimised SIMD libary for machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "conan>=1.65.0",
    "nanobind",
]

license = { file = "LICENSE" }

authors = [
  { name = "Ismaeel Bashir", email = "ismaeelbashir2003@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ismaeelbashir03/CapnHook-ML"
"Issue Tracker" = "https://github.com/ismaeelbashir03/CapnHook-ML/issues"
"Documentation"  = "https://ismaeelbashir03.github.io/CapnHook-ML/"
